[gd_scene load_steps=12 format=3 uid="uid://baj568pnwc4ph"]

[ext_resource type="Script" path="res://scenes/enemies/target.gd" id="1_nte11"]
[ext_resource type="Script" path="res://scenes/enemies/health_slider.gd" id="2_usxmj"]
[ext_resource type="AudioStream" uid="uid://kf70w8cqg0y" path="res://scenes/enemies/hit.ogg" id="3_o7ev4"]
[ext_resource type="PackedScene" uid="uid://bf8b30xdqlg21" path="res://scenes/enemies/progress_bar.tscn" id="4_5i7pn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_do5mn"]
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nkxxc"]
albedo_color = Color(1, 0.74902, 0, 1)
emission_enabled = true
emission = Color(1, 0.74902, 0, 1)
emission_energy_multiplier = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xrxto"]
material = SubResource("StandardMaterial3D_nkxxc")
height = 1.0
radial_segments = 32

[sub_resource type="ViewportTexture" id="ViewportTexture_fogxd"]
viewport_path = NodePath("HealthSlider/HealthSliderViewport")

[sub_resource type="Animation" id="Animation_ry4bo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthSliderViewport/ProgressBar:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_m1o2j"]
resource_name = "shot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthSliderViewport/ProgressBar:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.339735, 3.33907e-07, 1.08294e-07, 1), Color(0.341176, 0, 0, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7684"]
_data = {
"RESET": SubResource("Animation_ry4bo"),
"change_color": SubResource("Animation_m1o2j")
}

[node name="Target" type="CharacterBody3D" groups=["Enemy"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_nte11")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_do5mn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_xrxto")
skeleton = NodePath("../..")

[node name="HealthSlider" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2737, 0)
billboard = 1
texture = SubResource("ViewportTexture_fogxd")
script = ExtResource("2_usxmj")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HealthSlider"]
stream = ExtResource("3_o7ev4")
volume_db = -10.0

[node name="HealthSliderViewport" type="SubViewport" parent="HealthSlider"]
disable_3d = true
transparent_bg = true

[node name="ProgressBar" parent="HealthSlider/HealthSliderViewport" instance=ExtResource("4_5i7pn")]

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="HealthSlider"]
libraries = {
"": SubResource("AnimationLibrary_r7684")
}

[connection signal="hitted" from="." to="HealthSlider" method="_on_target_hitted"]
